[tool.poetry]
name = "greykite"
version = "1.0.0"
description = "Fork of greykite 1.0.0"
authors = [
    "MichaelaH <michaela.honkova@lynt.cz>",
    "Jan Smitka <jan.smitka@lynt.cz>"
]
repository = "https://github.com/LyntServices/greykite.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cvxpy = ">=1.2.1"
dill = ">=0.3.1.1"
holidays = "<0.25"
holidays-ext = ">=0.0.7"
ipython = ">=7.31.1"
matplotlib = ">=3.4.1"
numpy = ">=1.22.0,<1.25.0"
osqp = ">=0.6.2"
overrides = ">=2.8.0"
pandas = ">=1.5.0,<2.0.0"
patsy = ">=0.5.1"
plotly = ">=4.12.0"
pmdarima = ">=1.8.0,<=1.8.5"
pytest = ">=4.6.5"
pytest-runner = ">=5.1"
scipy = ">=1.5.4,<1.11.0"
six = ">=1.15.0"
scikit-learn = ">=0.24.1"
statsmodels = ">=0.12.2"
testfixtures = ">=6.14.2"
tqdm = ">=4.52.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python = ">=3.10,<3.11"
pytest = "7.1.2"
numpy = "1.23.2"
appnope = "0.1.3"
bump2version = "0.5.11"
click = "8.0.1"
coverage = "6.3.2"
cvxpy = "1.2.1"
dill = "0.3.6"
flake8 = "6.0.0"
holidays = "0.13"
holidays-ext = "0.0.8"
ipykernel = "6.4.1"
ipython = "7.31.1"
ipywidgets = "7.5.1"
jupyter = "1.0.0"
jupyter-client = "7.4.7"
jupyter-console = "6.4.4"
jupyter-core = "5.2.0"
jupyter-server = "2.2.1"
lunarcalendar = "0.0.9"
matplotlib = "3.5.2"
nbformat = "5.5.0"
notebook = "6.5.2"
osqp = "0.6.3"
plotly = "5.4.0"
scikit-learn = "1.1.2"
wheel = "0.33.6"
watchdog = "0.9.0"
twine = "1.14.0"
tqdm = "4.64.1"
tornado = "6.2"
testfixtures = "6.14.2"
statsmodels = "0.13.5"
sphinx-rtd-theme = "1.1.1"
sphinx-gallery = "0.10.1"
sphinx = "5.3.0"
six = "1.16.0"
seaborn = "0.11.1"
requests = "2.28.2"
scipy = "1.8.0"
pyzmq = "25.0.0"
pytest-runner = "5.3.1"
pmdarima = "1.8.5"
pip = "20.3.3"
pillow = "9.4.0"
patsy = "0.5.2"
pandas = "1.5.0"
overrides = "7.3.1"
cmake = "^3.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
