[tool.poetry]
name = "greykite"
version = "1.0.0"
description = "Fork of greykite 1.0.0"
authors = [
    "MichaelaH <michaela.honkova@lynt.cz>",
    "Jan Smitka <jan.smitka@lynt.cz>"
]
repository = "https://github.com/LyntServices/greykite.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cvxpy = "1.2.1"  # 1.5.1 failed tests
dill = ">=0.3.6"
holidays = "0.13"  # 0.24 failed tests
holidays-ext = ">=0.0.8"
ipython = ">=7.31.1"
matplotlib = "3.8.1"
numpy = ">=1.23.2,<1.25.0"
osqp = ">=0.6.3"
overrides = ">=7.3.1"
pandas = ">=1.5.0,<2.0.0"
patsy = ">=0.5.2"
plotly = ">=5.4.0"
pmdarima = "1.8.5"
pytest = "7.1.2"  # 8.2.2 failed tests
pytest-runner = ">=5.3.1"
scipy = ">=1.8.0,<1.11.0"
six = ">=1.16.0"
scikit-learn = "1.1.2"  # 1.5.0 failed tests
statsmodels = ">=0.13.5"
testfixtures = ">=6.14.2"
tqdm = ">=4.64.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2"
appnope = "0.1.3"
bump2version = "0.5.11"
click = "8.0.1"
coverage = "6.3.2"
flake8 = "6.0.0"
ipykernel = "6.4.1"
ipywidgets = "7.5.1"
jupyter = "1.0.0"
jupyter-client = "7.4.7"
jupyter-console = "6.4.4"
jupyter-core = "5.2.0"
jupyter-server = "2.2.1"
lunarcalendar = "0.0.9"
nbformat = "5.5.0"
notebook = "6.5.2"
wheel = "0.33.6"
watchdog = "0.9.0"
twine = "1.14.0"
tqdm = "4.64.1"
tornado = "6.2"
sphinx-rtd-theme = "1.1.1"
sphinx-gallery = "0.10.1"
sphinx = "5.3.0"
seaborn = "0.11.1"
requests = "2.28.2"
pyzmq = "25.0.0"
pip = "20.3.3"
pillow = "9.4.0"
cmake = "^3.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
